# expenses-server-fastapi

./: pyproject.toml  sql_app.db
expenses_app/: api_models.py  database_models.py  expenses.py  main.py  models.py  schemas.py
